[project]
name = "survey-analytics"
version = "0.1.0"
description = "Streamlit-Dashboard für Zufriedenheitsanalyse mit Treiberanalyse und Segmentierung"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.4.4",
    "pandas==3.0.2",
    "plotly==6.7.0",
    "scikit-learn==1.8.0",
    "statsmodels==0.14.6",
    "streamlit==1.56.0",
]
